After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 710232 - ClutterTransition is an abstract class, but it is not explicit in the docs.
ClutterTransition is an abstract class, but it is not explicit in the docs.
Status: RESOLVED FIXED
Product: clutter
Classification: Platform
Component: Documentation
1.16.x
Other Linux
: Normal minor
: ---
Assigned To: clutter-maint
clutter-maint
Depends on:
Blocks:
 
 
Reported: 2013-10-16 00:18 UTC by Alessandro Re
Modified: 2014-02-10 18:37 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
docs: Explicitly mention that Transition is abstract (979 bytes, patch)
2014-02-10 18:34 UTC, Emmanuele Bassi (:ebassi)
committed Details | Review

Description Alessandro Re 2013-10-16 00:18:13 UTC
I think in the ClutterTransition API reference is missing the fact that ClutterTransition is an abstract class.

https://developer.gnome.org/clutter/stable/ClutterTransition.html

Maybe it can be deducted from the presence of virtual methods, but adding it explicitly could be better.
Comment 1 Emmanuele Bassi (:ebassi) 2014-02-10 18:34:09 UTC
Created attachment 268707 [details] [review]
docs: Explicitly mention that Transition is abstract
Comment 2 Emmanuele Bassi (:ebassi) 2014-02-10 18:37:45 UTC
Attachment 268707 [details] pushed as dd08b6f - docs: Explicitly mention that Transition is abstract