docs: Explicitly mention that Transition is abstract

https://bugzilla.gnome.org/show_bug.cgi?id=710232